--- a/Resourses/html/style/css/style.css
+++ b/Resourses/html/style/css/style.css
@@ -2,31 +2,51 @@
     font-family: "Segoe Print";
     src: url(../fonts/segoePrint.ttf);
 }
+
 /*body{*/
 /*    background-color: #343a40;*/
 /*    color: wheat;*/
 /*}*/
-div{
+div {
     font-family: "Segoe Print", serif;
 }
 
-.logo{
+.logo {
     width: 180px;
 }
 
 .navbar-light .navbar-nav .nav-link {
     color: wheat;
 }
+
 .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
     color: #d2691e;
 }
-.text-chocolate{
+
+.text-chocolate {
     color: #d2691e;
 }
-.text-wheat{
+
+.text-wheat {
     color: wheat;
 }
 
-#searchKnowledge{
-    width: 350px;
+#searchKnowledge {
+    width: 450px;
+}
+
+.bg-gray {
+    background-color: #fafafb;
+}
+
+.vl {
+    border-left: 2px solid gray;
+    height: auto;
+}
+#tags li {
+    border: 1px solid #005cbf;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 1px;
+
 }
