--- a/src/app/core/nav/nav.component.html
+++ b/src/app/core/nav/nav.component.html
@@ -1,11 +1,11 @@
-<mat-nav-list>
-  <a mat-list-item routerLink="/">Начало</a>
-  <a mat-list-item routerLink="/vacation">Отпуск</a>
-  <a mat-list-item routerLink="/ddd">Знание</a>
-  <a mat-list-item routerLink="/">Указания и Правила</a>
-  <a mat-list-item routerLink="/">Списък принтери</a>
-  <a mat-list-item routerLink="/">Админ</a>
-</mat-nav-list>
+<!--<mat-nav-list>-->
+<!--  <a mat-list-item routerLink="/">Начало</a>-->
+<!--  <a mat-list-item routerLink="/events">Отпуск</a>-->
+<!--  <a mat-list-item routerLink="/ddd">Знание</a>-->
+<!--  <a mat-list-item routerLink="/">Указания и Правила</a>-->
+<!--  <a mat-list-item routerLink="/">Списък принтери</a>-->
+<!--  <a mat-list-item routerLink="/">Админ</a>-->
+<!--</mat-nav-list>-->
 
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
   <!-- This is the tree node template for leaf nodes -->
@@ -16,12 +16,11 @@
   <!-- This is the tree node template for expandable nodes -->
   <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
     <a mat-icon-button matTreeNodeToggle
-            [attr.aria-label]="'Toggle ' + node.name">
+       [attr.aria-label]="'Toggle ' + node.name">
+      <a [routerLink]="[node.url]">{{node.name}}</a>
       <mat-icon class="mat-icon-rtl-mirror">
         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
       </mat-icon>
-      <a [routerLink]="[node.url]">{{node.name}}</a>
     </a>
-
   </mat-tree-node>
 </mat-tree>
