Working on login and register functionality

--- a/src/app/core/action-button/action-button.component.html
+++ b/src/app/core/action-button/action-button.component.html
@@ -33,7 +33,7 @@
       <li><a href="#">Профил</a></li>
       <li><a href="#">Настройки</a></li>
       <hr>
-      <li><a href="#">Изход</a></li>
+      <li><a (click)="logout()">Изход</a></li>
     </ul>
   </li>
 </ul>
