--- a/src/app/user/register/register.component.css
+++ b/src/app/user/register/register.component.css
@@ -40,7 +40,6 @@ mat-slide-toggle {
 .button {
   margin: auto;
   font-size: larger;
-  width: 40%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -52,3 +51,12 @@ mat-slide-toggle {
 }
 
 
+@media
+only screen
+and (max-width: 760px), (min-device-width: 768px)
+and (max-device-width: 1024px) {
+  /* Force table to not be like tables anymore */
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+}
