--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,140 +1,152 @@
 <!--//username, email, jobTitle, password, repeatPassword, leadTeam,createdBy firstName,lastName-->
+
 <div class="container">
   <div class="center">
     <div *ngIf="!isLoading">
-    <form class="form" #f="ngForm" (ngSubmit)="submitHandler(f.value)">
+      <form class="form" #f="ngForm" (ngSubmit)="submitHandler(f.value)">
 
-      <span class="title">Регистрация</span>
-      <table class="example-full-width">
-        <tr>
-          <td>
-            <mat-form-field appearance="fill" class="full-width form-group">
-              <mat-label>Потребителско име</mat-label>
-              <label>
-                <input #username="ngModel" id="username" name="username" matInput type="text" ngModel required
-                       pattern="^[a-zA-Z\.-]{3,}">
-              </label>
-            </mat-form-field>
-          </td>
-          <td>
-            <mat-form-field appearance="fill" class="full-width form-group">
-              <mat-label>Email</mat-label>
-              <label>
-                <input #email="ngModel" id="email" name="email" matInput type="email" ngModel required
-                       pattern="^[a-zA-Z\.0-9]{1,}@\w+\.[a-z]{1,}$">
-              </label>
-            </mat-form-field>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <mat-form-field appearance="fill" class="full-width form-group">
-              <mat-label>Име</mat-label>
-              <label>
-                <input #firstname="ngModel" id="firstName" name="firstName" matInput type="text" ngModel required>
-              </label>
-            </mat-form-field>
-          </td>
-          <td>
-            <mat-form-field appearance="fill" class="full-width form-group">
-              <mat-label>Фамилия</mat-label>
-              <label>
-                <input #lastname="ngModel" id="lastName" name="lastName" matInput type="text" ngModel required>
-              </label>
-            </mat-form-field>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <mat-form-field appearance="fill" class="full-width form-group">
-              <mat-label>Парола</mat-label>
-              <label>
-                <input #password="ngModel" id="password" name="password" matInput
-                       [type]="hide ? 'password' : 'text'" ngModel required>
-              </label>
-              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                      [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-              </button>
-            </mat-form-field>
-          </td>
-          <td>
-            <mat-form-field appearance="fill" class="full-width form-group">
-              <mat-label>Повтори парола</mat-label>
-              <label>
-                <input #rePassword="ngModel" id="repeatPassword" name="repeatPassword" matInput
-                       [type]="hide ? 'password' : 'text'" ngModel required>
-              </label>
-              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                      [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-              </button>
-            </mat-form-field>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <mat-form-field appearance="fill" class="form-group full-width">
-              <mat-label>Отдел</mat-label>
-              <mat-select #jobTitle="ngModel" id="jobTitle" name="jobTitle" ngModel required>
-                <mat-option *ngFor="let job of jobs" [value]="job._id">
-                  {{job.title}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </td>
-          <td>
-            <mat-slide-toggle
-              #isLead="ngModel"
-              id="isLead"
-              name="isLead"
-              class="margin form-group"
-              color="primary"
-              ngModel>
-              Началник на отдел
-            </mat-slide-toggle>
-            <mat-slide-toggle
-              #isSupport="ngModel"
-              id="isSupport"
-              name="isSupport"
-              class="margin form-group"
-              color="warn"
-              ngModel>
-              Поддръжка на сайта
-            </mat-slide-toggle>
-            <mat-slide-toggle
-              #isAdmin="ngModel"
-              id="isAdmin"
-              name="isAdmin"
-              class="margin form-group"
-              color="accent"
-              ngModel>
-              Администратор
-            </mat-slide-toggle>
-          </td>
-        </tr>
-      </table>
-      <div class="button-container">
-        <button mat-raised-button color="primary" class="button" [disabled]="f.invalid">Регистрация</button>
-      </div>
-      <p *ngIf="username.touched && username.errors?.required" class="error">
-        Потребителското име е задължително!
-      </p>
-      {{username.errors}}
-      <p *ngIf="username.touched && username.errors?.emailValidator" class="error">
-        Потребителското име не е валидно! Минимум 3 латински букви.
-      </p>
-      <p *ngIf="email.touched && email.errors?.required" class="error">
-        Имейлът е задължително!
-      </p>
-      <p *ngIf="email.touched && email.errors?.emailValidator" class="error">
-        Имейлът не е валиден!
-      </p>
-    </form>
+
+
+        <span class="title">Регистрация</span>
+        <table class="example-full-width">
+          <tr>
+            <td>
+              <mat-form-field appearance="fill" class="full-width form-group">
+                <mat-label>Потребителско име</mat-label>
+                <label>
+                  <input #username="ngModel" id="username" name="username" matInput type="text" ngModel required
+                         pattern="^[a-zA-Z\.0-9]{3,}">
+                </label>
+              </mat-form-field>
+              <div *ngIf="username.invalid && (username.dirty || username.touched)"><app-error [error]="message('Username','Minimum 3 latin letters')"></app-error> </div>
+            </td>
+            <td>
+              <mat-form-field appearance="fill" class="full-width form-group">
+                <mat-label>Email</mat-label>
+                <label>
+                  <input #email="ngModel" id="email" name="email" matInput type="email" ngModel required
+                         pattern="^[a-zA-Z\.0-9]{1,}@\w+\.[a-z]{1,}$">
+                </label>
+              </mat-form-field>
+              <div *ngIf="email.invalid && (email.touched)"><app-error [error]="'Email is required!'"></app-error></div>
+              <div *ngIf="email.invalid && (email.dirty)"><app-error [error]="'Email is not valid'"></app-error></div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field appearance="fill" class="full-width form-group">
+                <mat-label>Име</mat-label>
+                <label>
+                  <input #firstName="ngModel" id="firstName" name="firstName" matInput type="text" ngModel required>
+                </label>
+              </mat-form-field>
+              <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"><app-error [error]="'First name is required!'"></app-error></div>
+            </td>
+            <td>
+              <mat-form-field appearance="fill" class="full-width form-group">
+                <mat-label>Фамилия</mat-label>
+                <label>
+                  <input #lastName="ngModel" id="lastName" name="lastName" matInput type="text" ngModel required>
+                </label>
+              </mat-form-field>
+              <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"><app-error [error]="'last name is required!'"></app-error></div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field appearance="fill" class="full-width form-group">
+                <mat-label>Парола</mat-label>
+                <label>
+                  <input #password="ngModel" id="password" name="password" matInput
+                         [type]="hide ? 'password' : 'text'" ngModel required>
+                </label>
+                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                  <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+              </mat-form-field>
+              <div *ngIf="password.invalid && (password.dirty || password.touched)"><app-error [error]="'password is required!'"></app-error></div>
+            </td>
+            <td>
+              <mat-form-field appearance="fill" class="full-width form-group">
+                <mat-label>Повтори парола</mat-label>
+                <label>
+                  <input #rePassword="ngModel" id="repeatPassword" name="repeatPassword" matInput
+                         [type]="hide ? 'password' : 'text'" ngModel required>
+                </label>
+                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                  <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+              </mat-form-field>
+              <div *ngIf="rePassword.invalid && (rePassword.dirty || rePassword.touched)"><app-error [error]="'Repeat password is required!'"></app-error></div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field appearance="fill" class="form-group full-width">
+                <mat-label>Отдел</mat-label>
+                <mat-select #jobTitle="ngModel" id="jobTitle" name="jobTitle" ngModel required>
+                  <mat-option *ngFor="let job of jobs" [value]="job._id">
+                    {{job.title}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <div *ngIf="jobTitle.invalid && (jobTitle.dirty || jobTitle.touched)"><app-error [error]="'Job Title is required!'"></app-error></div>
+            </td>
+            <td>
+              <mat-slide-toggle
+                #isLead="ngModel"
+                id="isLead"
+                name="isLead"
+                class="margin form-group"
+                color="primary"
+                ngModel>
+                Началник на отдел
+              </mat-slide-toggle>
+              <mat-slide-toggle
+                #isSupport="ngModel"
+                id="isSupport"
+                name="isSupport"
+                class="margin form-group"
+                color="warn"
+                ngModel>
+                Поддръжка на сайта
+              </mat-slide-toggle>
+              <mat-slide-toggle
+                #isAdmin="ngModel"
+                id="isAdmin"
+                name="isAdmin"
+                class="margin form-group"
+                color="accent"
+                ngModel>
+                Администратор
+              </mat-slide-toggle>
+            </td>
+          </tr>
+        </table>
+        <div class="button-container">
+          <button mat-raised-button color="primary" class="button" [disabled]="f.invalid">Регистрация</button>
+        </div>
+
+<!--        <p *ngIf="username.touched && username.errors?.required" class="error">-->
+<!--          Потребителското име е задължително!-->
+<!--        </p>-->
+<!--        {{username.errors}}-->
+<!--        <p *ngIf="username.touched && username.errors?.emailValidator" class="error">-->
+<!--          Потребителското име не е валидно! Минимум 3 латински букви.-->
+<!--        </p>-->
+<!--        <p *ngIf="email.touched && email.errors?.required" class="error">-->
+<!--          Имейлът е задължително!-->
+<!--        </p>-->
+<!--        <p *ngIf="email.touched && email.errors?.emailValidator" class="error">-->
+<!--          Имейлът не е валиден!-->
+<!--        </p>-->
+      </form>
+<!--      -->
     </div>
     <div *ngIf="isLoading">
       <mat-spinner></mat-spinner>
     </div>
   </div>
 </div>
-
