--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ wheat - #f5deb3
 main gray - #303030
 secondary gray - #424242
 white - #ffffff
+error - #f44336
 */
 @font-face {
   font-family: "Segoe Print";
