--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,25 +1,36 @@
-<div class="container">
-  <div class="center">
-    <form class="form" #f="ngForm" (ngSubmit)="submitHandler(f.value)">
-      <mat-form-field appearance="fill" class="full-width form-group">
-        <mat-label>Потребителско име</mat-label>
-        <label for="username"></label>
-        <input #username="ngModel" id="username" name="username" matInput type="text"
-               ngModel required value="sklad">
-      </mat-form-field>
-      <mat-form-field appearance="fill" class="full-width form-group">
-        <mat-label>Парола</mat-label>
-        <label for="password">
-        </label><input #password="ngModel" id="password" name="password" matInput
-                       [type]="hide ? 'password' : 'text'" ngModel required value="1234">
-        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
-      <div class="form">
-        <button mat-raised-button color="primary" class="button" [disabled]="f.invalid">Вход</button>
-      </div>
-    </form>
+<section>
+  <div
+    class="container"
+    fxLayout="row"
+    fxLayout.xs="column"
+    fxFlexFill
+    fxLayoutAlign="center center"
+  >
+    <div fxFlex="50">
+      <form class="form" #f="ngForm" (ngSubmit)="submitHandler(f.value)">
+        <span class="title">Вход</span>
+        <hr>
+        <mat-form-field appearance="fill" class="full-width form-group">
+          <mat-label>Потребителско име</mat-label>
+          <label for="username"></label>
+          <input #username="ngModel" id="username" name="username" matInput type="text"
+                 ngModel required>
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="full-width form-group">
+          <mat-label>Парола</mat-label>
+          <label for="password">
+          </label><input #password="ngModel" id="password" autocomplete="off" name="password" matInput
+                         [type]="hide ? 'password' : 'text'" ngModel required>
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                  [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </button>
+        </mat-form-field>
+        <hr>
+        <div class="button-container">
+          <button mat-raised-button color="primary" class="button" [disabled]="f.invalid">Вход</button>
+        </div>
+      </form>
+    </div>
   </div>
-</div>
+</section>
