--- a/src/app/events/calendar/calendar.component.css
+++ b/src/app/events/calendar/calendar.component.css
@@ -3,16 +3,12 @@ h3 {
 }
 
 pre {
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
   padding: 15px;
 }
 
 .text-center {
   text-align: center !important
-}
-
-.example-spacer {
-  flex: 1 1 30%;
 }
 .h3, h3 {
   font-size: 1.75rem
